--- a/Dissertation.tex
+++ b/Dissertation.tex
@@ -94,7 +94,7 @@
 \include{Abstract}
 \clearpage
 \thispagestyle{plain}
-\par\vspace*{.35\textheight}{\centering For my parents.\par}
+\par\vspace*{.35\textheight}{\centering For my parents\par}
 \include{Acknowledgments}
 
 % tables of contents
