--- a/Abstract.tex
+++ b/Abstract.tex
@@ -13,18 +13,13 @@ by \\
 \vspace{0.25in}
 
 \noindent 
+
+
 For millennia, scientists have sought to uncover the secrets what holds the world together. From which, the field of optics has been at the forefront, unravelling material properties through investigations of light-matter interactions. 
-%Since the birth of the laser in 1960 scientist have been fascinated by the optical phenomena and probed the material properties of many brilliant scientists allowed deep insights into the question in its inmost folds. Step by step we gain more understanding of what light actually is and especially the interaction of light with matter is a treasure trove for new applications and a demanding criterion for the underlying physical theories.
-%Since the invention of the laser in 1960, optical scientists have begun to capitalize in earnest on the advances in nanofabrication that is owed to the explosive rise of miniaturized semiconductor electronics. The resulting field, nanophotonics, has opened a vast design space for applied researchers and required revisiting some of the oldest problems and assumptions of optical physics. 
+
 As the field has progressed, the smallest unit at which can be probed and manipulated has subsequently decreased, as such the resulting field of sub-field of optics, nanophotonics, reflecting the processing of light at the nanoscale, has blossomed into a vast design space for both applied and theoretical researchers.
-This thesis reflects the advancement of just a few small subtopics in the field, and is divided into an introduction followed by four chapters:
 
-\paragraph{Chapter 1} introduces the field of nanophotonics and explains how electron density waves that propagate along a metal-dielectric interface, commonly known as plasmons, can have such a large impact on the field. Following, is a brief introduction on how plasmonic excitations are born, as well as the forces that result from the high electric field density plasmons are known for.
+The use of plasmonics, the oscillations of electron-density, has accelerated the field for two reasons. The first is that plasmonics allows for the coupling of light to sub-wavelength dimensions, one way to get around the diffraction limit. Second, is that advances in nanofabrication methods, driven by the silicon micoelectronics industry, has allowed for the fabrication and development of metallic structures at the nanoscale, a requirement for plasmonic excitations using visible light.
 
-\paragraph{Chapter 2} \input{One.tex}
-
-\paragraph{Chapter 3} \input{Two.tex}
-
-\paragraph{Chapter 4} \input{Three.tex}
-
-\paragraph{Chapter 5} \input{Four.tex}
+%In the last three or so decades, optical scientists have begun to capitalize in earnest on the advances in nanofabrication that is owed to the explosive rise of miniaturized semiconductor electronics. The resulting field, nanophotonics, has opened a vast design space for applied researchers and required revisiting some of the oldest problems and assumptions of optical physics. 
+Polarization, meaning, in the context of light, the direction of oscillation of the electromagnetic field in space, is a particularly malleable property of light that can be used to shape and direct wave fronts, to measure and control light-matter interactions, and to encode information. It remains an underexplored and underutilized feature of nature, though the new methods of nanophotonics can harness its potential to a much greater extent than any previous optical technology platform. This thesis explores some aspects of the role light’s polarization plays at the interface of optics and nanotechnology. In particular, it will touch upon the way polarization may be used to control the generation of optical nearfields, how the polarization structure of evanescent waves leads to unusual optical forces, and how nanoscale polarization-transformations enable a new class of polarization-sensitive optical elements. It will also show how nanophotonics may address the problem of measuring polarization based on a new polarimeter architecture.
