--- a/Ch1_NLNP.tex
+++ b/Ch1_NLNP.tex
@@ -1,3 +1,5 @@
+This chapter investigates magneto-plasmonics, the ability to perturb a plasmonic response with magnetic fields, in gold nanoparticles. Magneto-plasmonics is generally associated with ferromagnetic-plasmonic materials because such optical-derived responses from nonmagnetic materials alone are considered weak, however, this chapter shows the measurable magneto-optical responses in gold nanoparticles. This chapter shows that there exists a transition between linear and nonlinear magneto-optical behaviors in gold nanocolloids that is observable at ultra-low illumination intensities and direct-current magnetic fields. The response is attributed to polarization-dependent nonzero-time-averaged plasmonic loops, vortex power flows, and nanoparticle magnetization. This chapter identifies significant mechanical effects that arise via magnetic-dipole interactions, exhibited via changes in the transmission spectra.
+
 \section{Introduction}
 The plasmonic resonances of noble metal nanostructures manifest in the visible spectral range and have a fundamental role in shaping the optical properties of materials [\cite{Link,Cortie}]. At such resonances the electromagnetic fields are concentrated around sub-wavelength structures producing high local field enhancements, which has been the study of many investigations [\cite{Barnes,Kelly03,Ozbay}]. Since the resonances are highly dependent on the refractive index of the material, as well as the surrounding medium, methods that modify a materials refractive index \textit{i.e.,} electro-optically [\cite{Dicken,Chyou}] or thermally [\cite{Nikolajsen}], are realised by a shift in the plasmonic resonance. An external magnetic field can also modulate a material's optical properties if the material exhibits magneto-optical (MO) behaviour [\cite{Temnov,Gonzalez,Deng}]. The concurrent application of a magnetic field is associated with additional phenomena such as increased Faraday rotation [\cite{Du}], MO enhancement of localized and propagating surface plasmons [\cite{Sepulveda,Torrado}], or introduction of new magnetic modes [\cite{Pineider,Tang,FanSci}]. Observations of these MO phenomena, however, are generally small unless the plasmonic material is mated with a ferromagnet. Another class of MO responses involves non-oscillating, DC, magnetic modes. Such modes are achieved in non-magnetic media via the polarization-dependent inverse Faraday effect [\cite{Hertel}] though this DC or low frequency MO response is claimed to be too small to observe at room temperature and at low intensities due to thermal fluctuations [\cite{Gu}] (the effect is observed with high intensity lasers, $>$370 MW/cm$^2$ [\cite{Raja}]). Anomalously-large photo-induced magnetic responses are observed in non-ferromagnetic metal nanocolloids [\cite{Singh}], however the origin of the effect is unexplained. This chapter identifies and analyses the threshold transition between linear and nonlinear effects, which is attributed to a mechanical response of the nanocolloid.
 
