--- a/Ch2_chiral-hybrid-modes.tex
+++ b/Ch2_chiral-hybrid-modes.tex
@@ -1,3 +1,5 @@
+This chapter shows that mechanical forces are produced by plasmonic excitation on nanowires, a phenomenon that has been widely overlooked and points to a new family of plasmonically-driven processes. On a fundamental level, this chapter investigates the action of the Lorentz force on a free electron gas that is bound to the surface of a nanowire. Appreciableisonances via the excitation of chiral hybrid plasmon modes. The plasmonic activity is associated as the underlying mechanism for nanowire rotation, which explains prior experimental results. The presence of chiral hybrid plasmon modes yield larger net translation and torque forces than either transverse or longitudinal plasmon modes. The asymmetric plasmon behavior affects the complex nonlinear dynamics of plasmonic nonspherical nanoparticles in fluids.
+
 \section{Introduction}
 While light is massless, it imparts momenta that are significant, which: confine ion beams [\cite{Petrich1993}]; propel solar sails [\cite{Janhunen2007}]; rotate and twist objects [\cite{Beth1936, Paterson2001, Tsai2014}]; levitate, trap, and move matter [\cite{Laboratories1997, NieminenRev, Novotny1997}]; cool atoms [\cite{Weiner1999}]; and alter the crystallization of solids [\cite{Chowdhury1985}]. Our knowledge of light's momentum transfer is intrinsic to the design of facilities for low-temperature and high-energy physics, cell and molecular biology, and advanced materials research [\cite{Laboratories1997}], and is relevant to an expansive development of optomechanical devices for sensors and electronics technologies [\cite{Hugel2002, Kippenberg2007, Thourhout2010}].  Currently, the laser trapping of uncharged dielectric matter is commonplace [\cite{Laboratories1997}]; however, the optically-induced mechanics of conducting or plasmonic nanoparticles have been shown to be, at the very least, more complex [\cite{Dienerowitz2008, Saija2009, Shvedov2010, Yan2012, Yan2012a, Yan2013, Yan2013a, Yan2013b}]. One challenge stems from the numerous channels through which energy is transferred: particles also move in the presence of electric fields, magnetic fields, and thermal gradients [\cite{Bhatt, Keshoju, Edwards2006}], which are directly and indirectly produced by plasmons.  Understanding these dynamic, momentum-conserving mechanisms involves, in part, understanding the interactions among these fields.
 
