--- a/Ch3_diffractal2.tex
+++ b/Ch3_diffractal2.tex
@@ -1,3 +1,5 @@
+This chapter explores fractal architectures for robust signal transmission. Specifically, the chapter investigates the phenomenon that occurs when plane waves diffract through fractal-patterned apertures, the resulting far-field profiles or diffractals also exhibit iterated, self-similar features. This specific family of architectures enable robust signal processing and spatial multiplexing: arbitrary parts of a diffractal contain sufficient information to recreate the entire original sparse signal.
+
 \section{Introduction}
 Many natural systems exhibit fractal properties [\cite{Mandlebrot}]; in fact, scale invariance underlies many self-similar phenomena, from frost crystallization to animal colouration to stock-market pricing. In the realm of optics, the fractal anatomy of systems is widely associated with aggregated dielectric and metal colloids [\cite{Sorensen}], crystals [\cite{Macke}], and tissues [\cite{Schmitt}]. Fractal systems are also observed in nonlinear optics [\cite{Soljacic, Segev}] and fractalized optical properties can even efficiently characterize or enhance the response of materials [\cite{Stockman, Tsai}]. Less well utilized are the features of diffractals, or the diffraction patterns of fractal signals  [\cite{Berry,Horvath,Hou}]. Diffractals feature in methods of encrypting data [\cite{Barrera}] as a versatile approach to double random-phase encoding [\cite{Unnikrishnan}]. However, to differentiate from previous work fractal architecture is exploited to improve transmission robustness.
 
