--- a/Ch4_metasurface.tex
+++ b/Ch4_metasurface.tex
@@ -1,5 +1,8 @@
 \def\rcurs{{\mbox{$\resizebox{.16in}{.08in}{\includegraphics{ScriptR}}$}}} 
 
+This chapter presents a metasurface design that produces a chiral response from an array of achiral sub-structures, or meta-atoms. In general, the response of an individual meta-atom is extrapolated to explain the collective response of a metasurface, in a manner that neglects the interactions between meta-atoms. Thus, the convention is that chiral responses are born from metasurfaces composed of chiral meta-atoms. This chapter studies a metasurface that is composed of tilted achiral meta-atoms with no spatial variation of the unit-cell yet derives appreciable optical chirality solely from the asymmetric interactions between meta-atoms. Interactions between meta-atoms are modelled as the Lorentz force that arises from the Larmor radiation of adjacent plasmonic resonators because their inclusion accurately predicts the bonding/anti-bonding modes that are measured experimentally. Experimentally observed are the emergence of multiple polarization eigenmodes, among other polarization-dependent responses, which cannot be modeled with the transmission matrix formalism. The results are essential for the precise characterization and design of metasurfaces. 
+
+
 \section{Introduction} 
 Metamaterials are composed of sub-wavelength components, or meta-atoms that individually alter the intensity and phase of light. When placed on a 2D surface, metamaterials are known as metasurfaces [\cite{Zhao}] and have enabled many applications from quarter [\cite{Yu}], half-wave plates[\cite{Ding}], and cross-polarizers [\cite{Qin}], to ultra-thin lenses [\cite{Aieta,Ni}]. Chiral metasurfaces can ultimately be defined as those that exhibit a response dependent on the incident circular-polarization handedness, though the specific mechanism behind the phenomena has been debated; it has been argued that planar structures such as metasurfaces cannot exhibit true optical activity (OA) or circular dichroism (CD) without the excitation of magnetic resonances since certain 3D symmetry properties are not satisfied [\cite{Hentschel, Eftekhari}]. The equivalent response from planar metasurfaces can be achieved by alternate methods such as the interaction of plasmon modes [\cite{Eftekhari, Fan10}], or by non-radiative dissipation [\cite{Khanikaev}], and is named optical chirality. The difference in transmission from different polarization states due to optical chirality produces an \textit{equivalent} effect to OA and CD. 	
 
