--- a/Dissertation.tex
+++ b/Dissertation.tex
@@ -181,60 +181,63 @@
 \nomenclature[C]{$\lambda$}{Wavelength}
 \nomenclature[C]{$A$}{Torque Vectors in Spherical Coordinate System}
 \nomenclature[C]{$P$}{Polarization Density}
-\nomenclature[D]{$k$}{Wave-Vector}
-\nomenclature[D]{$n$}{Fractal Order}
-\nomenclature[D]{$\delta$}{Delta Function}
-\nomenclature[D]{$T$}{Transmission Function}
-\nomenclature[D]{$r$}{Relative Scaling Factor}
-\nomenclature[D]{$i_c$}{$\sqrt{-1}$}
+
 \nomenclature[D]{$\lambda$}{Wavelength}
-\nomenclature[D]{PSNR}{Peak Signal-to-Noise Ratio}
-\nomenclature[D]{SLM}{Spatial Light Modulator}
-\nomenclature[D]{FS}{Fractalized Signal}
-\nomenclature[D]{OS}{Original Signal}
-\nomenclature[D]{DS}{Diffractal Signal}
-\nomenclature[D]{RFS}{Reconstructed Fourier-Transformed Signal}
-\nomenclature[D]{BDS}{Blocked Diffractal Signal}
-\nomenclature[D]{ROS}{Reconstructed Original Signal}
-\nomenclature[E]{$\lambda$}{Wavelength}
-\nomenclature[E]{$\theta_s$}{Aperture Tilt}
-\nomenclature[E]{$k_e$}{Coulombs Constant}
-\nomenclature[E]{$\epsilon_0$}{Permittivity of Free Space}
-\nomenclature[E]{$r$}{Spatial Coordinate}
-\nomenclature[E]{$q$}{Electric Charge}
-\nomenclature[E]{$R$}{Lattice Distance}
-\nomenclature[E]{$F$}{Force}
-\nomenclature[E]{$\omega$}{Angular Frequency}
-\nomenclature[E]{$c$}{Speed of Light}
-\nomenclature[E]{$\beta$}{Ratio of Speed to the Speed of Light}
-\nomenclature[E]{$M$}{Mass}
-\nomenclature[E]{$\omega_0$}{Angular Frequency Associated with Harmonic Restorative Force}
-\nomenclature[E]{$\gamma$}{Damping Rate}
-\nomenclature[E]{$\delta$}{Perturbation Parameter}
-\nomenclature[E]{$F^{int}$}{Interaction Force}
-\nomenclature[E]{$t$}{Time}
-\nomenclature[E]{$E$}{Electric Field}
-\nomenclature[E]{$x_h/y_h$}{Homogeneous Solution in the $x/y$ direction}
+\nomenclature[D]{$\theta_s$}{Aperture Tilt}
+\nomenclature[D]{$k_e$}{Coulombs Constant}
+\nomenclature[D]{$\epsilon_0$}{Permittivity of Free Space}
+\nomenclature[D]{$r$}{Spatial Coordinate}
+\nomenclature[D]{$q$}{Electric Charge}
+\nomenclature[D]{$R$}{Lattice Distance}
+\nomenclature[D]{$F$}{Force}
+\nomenclature[D]{$\omega$}{Angular Frequency}
+\nomenclature[D]{$c$}{Speed of Light}
+\nomenclature[D]{$\beta$}{Ratio of Speed to the Speed of Light}
+\nomenclature[D]{$M$}{Mass}
+\nomenclature[D]{$\omega_0$}{Angular Frequency Associated with Harmonic Restorative Force}
+\nomenclature[D]{$\gamma$}{Damping Rate}
+\nomenclature[D]{$\delta$}{Perturbation Parameter}
+\nomenclature[D]{$F^{int}$}{Interaction Force}
+\nomenclature[D]{$t$}{Time}
+\nomenclature[D]{$E$}{Electric Field}
+\nomenclature[D]{$x_h/y_h$}{Homogeneous Solution in the $x/y$ direction}
+\nomenclature[D]{$k$}{Wave-Vector}
+\nomenclature[D]{$\langle\rangle$}{Time-Average}
+\nomenclature[D]{$a$}{Metasurface Periodicity}
+\nomenclature[D]{$\psi$}{Azimuthal Component of Polarization}
+\nomenclature[D]{$\chi$}{Elliptical Component of Polarization}
+\nomenclature[D]{OR}{Optical Rotation}
+\nomenclature[D]{CD}{Circular Dichroism}
+\nomenclature[D]{OA}{Optical Activity}
+\nomenclature[D]{$P$}{Polarization Density}
+\nomenclature[D]{$N_0$}{Free Charge Carrier Density}
+\nomenclature[D]{$\epsilon$}{Material Permittivity}
+\nomenclature[D]{$\Gamma$}{Non-Locality Parameter}
+\nomenclature[D]{$T_{RCP}$}{Transmission of Right Circular Polarization}
+\nomenclature[D]{$T_{LCP}$}{Transmission of Left Circular Polarization}
+\nomenclature[D]{$S$}{Screening Factor}
+\nomenclature[D]{ZEP}{High Performance Electron Beam Resist}
+\nomenclature[D]{$MR$}{Milling Rate}
+\nomenclature[D]{$L$}{Layer Thickness}
+\nomenclature[D]{PMMA}{Electron Beam Resist}
+\nomenclature[D]{SEM}{Scanning Electron Microscope}
+
 \nomenclature[E]{$k$}{Wave-Vector}
-\nomenclature[E]{$\langle\rangle$}{Time-Average}
-\nomenclature[E]{$a$}{Metasurface Periodicity}
-\nomenclature[E]{$\psi$}{Azimuthal Component of Polarization}
-\nomenclature[E]{$\chi$}{Elliptical Component of Polarization}
-\nomenclature[E]{OR}{Optical Rotation}
-\nomenclature[E]{CD}{Circular Dichroism}
-\nomenclature[E]{OA}{Optical Activity}
-\nomenclature[E]{$P$}{Polarization Density}
-\nomenclature[E]{$N_0$}{Free Charge Carrier Density}
-\nomenclature[E]{$\epsilon$}{Material Permittivity}
-\nomenclature[E]{$\Gamma$}{Non-Locality Parameter}
-\nomenclature[E]{$T_{RCP}$}{Transmission of Right Circular Polarization}
-\nomenclature[E]{$T_{LCP}$}{Transmission of Left Circular Polarization}
-\nomenclature[E]{$S$}{Screening Factor}
-\nomenclature[E]{ZEP}{High Performance Electron Beam Resist}
-\nomenclature[E]{$MR$}{Milling Rate}
-\nomenclature[E]{$L$}{Layer Thickness}
-\nomenclature[E]{PMMA}{Electron Beam Resist}
-\nomenclature[E]{SEM}{Scanning Electron Microscope}
+\nomenclature[E]{$n$}{Fractal Order}
+\nomenclature[E]{$\delta$}{Delta Function}
+\nomenclature[E]{$T$}{Transmission Function}
+\nomenclature[E]{$r$}{Relative Scaling Factor}
+\nomenclature[E]{$i_c$}{$\sqrt{-1}$}
+\nomenclature[E]{$\lambda$}{Wavelength}
+\nomenclature[E]{PSNR}{Peak Signal-to-Noise Ratio}
+\nomenclature[E]{SLM}{Spatial Light Modulator}
+\nomenclature[E]{FS}{Fractalized Signal}
+\nomenclature[E]{OS}{Original Signal}
+\nomenclature[E]{DS}{Diffractal Signal}
+\nomenclature[E]{RFS}{Reconstructed Fourier-Transformed Signal}
+\nomenclature[E]{BDS}{Blocked Diffractal Signal}
+\nomenclature[E]{ROS}{Reconstructed Original Signal}
+
  
 \printnomenclature
 
@@ -262,15 +265,15 @@
 \clearpage
 
 % chapter four
-\chapter{Robustness and spatial multiplexing via diffractal architectures}
-\chaptermark{Spatial multiplexing via diffractal architectures}
-\input{Ch3_diffractal2}
-\clearpage
-
-% chapter five
 \chapter{Meta-optical chirality and emergent eigen-polarization modes via plasmon interactions}
 \chaptermark{Meta-Optical Chirality}
 \input{Ch4_metasurface}
+\clearpage
+
+% chapter five
+\chapter{Robustness and spatial multiplexing via diffractal architectures}
+\chaptermark{Spatial multiplexing via diffractal architectures}
+\input{Ch3_diffractal2}
 \clearpage
 
 % Summary
